# sWeights

./: .gitignore  README.md  pyproject.toml  usage_examples.ipynb
fit_methods/: __init__.py
fit_methods/bootstrap/: bootstrap.py
fit_methods/distribution/: pdfs.py
fit_methods/fitting/: __init__.py
fit_methods/generation/: generator.py
fit_methods/sweight/: __init__.py  sweightor.py
src/bootstrap/: __init__.py  bootstrap.py
src/distribution/: __init__.py  pdfs.py
src/fitting/: __init__.py  fitter.py
src/generation/: __init__.py  generator.py
src/sweight/: __init__.py  sweightor.py
