[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"] 
build-backend = "setuptools.build_meta"

[project]
name = "s1-coursework"
dynamic = ["version"] 
description = "A Python package for statistical analysis"
readme = "README.md"    
authors = [{ name = "Keying Song", email = "ks2146@cam.ac.uk" }]
         
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",     
    "Operating System :: OS Independent",
]


requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "iminuit>=2.0"]


[tool.setuptools_scm] 
fallback_version = "0.0.0beta0"

[tool.setuptools.packages.find]
where = ["."]